<resources>
    <string name="app_name">Apprende</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login_text">Iniciar sesión</string>
    <string name="forgot_password">Olvidaste la contraseña?</string>
    <string name="login_to_account">Ingresar</string>
    <string name="text_join_us">Si aun no tienes cuenta con nosotros puedes crear una, solo tienes que dar click en \'crear cuenta\'</string>
    <string name="Email_error">Correo electrónico no válido</string>
    <string name="Password_error">Contraseña no válida</string>
    <string name="Signup_Text">Registrate</string>
    <string name="name_register">Nombre completo</string>
    <string name="terms_conditions">Aceptar los términos y condiciones</string>
    <string name="register_text_botton">Registrarse</string>
    <string name="back_to_login">Ya tienes una cuenta?</string>
    <string name="text_restar_password">Recuperar contraseña</string>
    <string name="send_code">Enviar código</string>
    <string name="home_label">Inicio</string>
    <string name="course_label">Cursos</string>
    <string name="profile_label">Perfil</string>
    <string name="logout_label">Salir</string>
    <string name="location_label">Localización</string>
    <string name="category">Categorias</string>
    <string name="home_msg">Bienvenido, exiten diferentes categorías de estudio, dentro de ella se pueden elegir los cursos que deseas realizar, exitos</string>
    <string name="cat_dev">Cursos Disponibles</string>
    <string name="course1_name1">test</string>
    <string name="courses_fragment_title">Nuestros Cursos</string>
    <string name="info">Select</string>
    <string name="search_label">Buscar</string>
    <string name="text_info_fragment_courses">Nuestros Cursos</string>
    <string name="Profile_base_name">Pepito Sierra Morena</string>
    <string name="profile_base_email">correo@correo.com</string>
    <string name="logout_text">¿Deseas cerrar sesión?, toda tu información será guardada y se conservará al iniciar sesión nuevamente</string>
    <string name="profile_title">Perfil</string>
    <string name="profile_text_location">¿Desea conocer los lugares donde puede conseguir la documentación de los cursos en fisíco? Dale click al siguiente botón</string>
    <string name="invalid_credentials">Credenciales inválidas</string>
    <string name="register_course">Se ha registrado exitosamente en este curso</string>
    <string name="details">Infomación del curso</string>
    <string name="settings">Los cambios han sido guardos exitosamente</string>}
    <string name="signup_error">Error al crear cuenta</string>
    <string name="signup_success">Cuenta Creada Exitosamente</string>
</resources>