<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProfileFragment">

    <TextView
        android:id="@+id/profile_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/profile_title"

        android:textAppearance="@style/textoTitulo"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/big_top_margin"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin">

            <com.google.android.material.imageview.ShapeableImageView

                android:id="@+id/profile_fragment_image"
                android:layout_width="@dimen/banner_size"
                android:layout_height="@dimen/banner_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/default_margin"
                app:shapeAppearanceOverlay="@style/cutImage"
                android:src="@drawable/apprende"
                android:scaleType="centerCrop"
                app:strokeWidth="@dimen/stroke"
                app:strokeColor="@color/black"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_fragment_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/profile_fragment_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/default_margin"
                tools:text="@string/Profile_base_name"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_fragment_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/profile_fragment_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/default_margin"
                tools:text="@string/profile_base_email"
                />
            <com.google.android.material.floatingactionbutton.FloatingActionButton

                android:id="@+id/profile_fragment_settings_botton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                app:fabSize="mini"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_settings_24"
                tools:ignore="SpeakableTextPresentCheck" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile_card_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="50dp"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin">

            <TextView
                android:id="@+id/profile_fragment_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/profile_text_location"
                android:layout_marginHorizontal="@dimen/big_margin"
                android:layout_marginVertical="@dimen/default_margin"
                android:textAppearance="@style/textoParrafo2"
                android:gravity="center"
                />


            <com.google.android.material.floatingactionbutton.FloatingActionButton

                android:id="@+id/profile_fragment_location_botton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/default_margin"
                app:fabSize="normal"
                app:layout_constraintTop_toBottomOf="@id/profile_fragment_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_location_city_24"
                tools:ignore="SpeakableTextPresentCheck"
                android:contentDescription="TODO" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>




</androidx.constraintlayout.widget.ConstraintLayout>